--- a/app/components/cart/cart.view.html
+++ b/app/components/cart/cart.view.html
@@ -1,6 +1,6 @@
 <div class="container">
   <nav-bar></nav-bar>
-  <search></search>
+  <search categories="categories"></search>
 <div class="row">
   <item-list></item-list>
     <checkout-panel></checkout-panel>
